terraform/vpc.tf
resource "aws_vpc" "main" {
    cidr_block = "10.0.0.0/16"
    tags       = {
      Name = "main"
    }
  }

  resource "aws_subnet" "main" {
    vpc_id     = aws_vpc.main.id
    cidr_block = "10.0.1.0/24"
    tags       = {
      Name = "subnet_1"
    }
  }

  resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.main.id
  }

  resource "aws_route_table" "main" {
    vpc_id = aws_vpc.main.id

    route {
      cidr_block = "0.0.0.0/0"
      gateway_id = aws_internet_gateway.main.id
    }
  }

  resource "aws_route_table_association" "main" {
    subnet_id      = aws_subnet.main.id
    route_table_id = aws_route_table.main.id
  }
